day-11/monitoring-network-policy.yaml
# Sugestão do Paulo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-grafana
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/component: grafana
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-prometheus-k8s
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-alertmanager-main
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alertmanager
      app.kubernetes.io/component: alert-router
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 9093
