day-11/network-policy.yaml
# Sugestão do Paulo
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: monitoring
  name: allow-grafana
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/component: grafana
      app.kubernetes.io/part-of: kube-prometheus
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3000
